Fix scrollbar issue locally

--- a/frontend/pages/hosts/ManageHostsPage/_styles.scss
+++ b/frontend/pages/hosts/ManageHostsPage/_styles.scss
@@ -197,7 +197,7 @@
       .data-table-block {
         .data-table {
           &__wrapper {
-            overflow-x: scroll;
+            overflow-x: auto;
           }
           &__table {
             tbody {
